; ModuleID = '/home/carl/AnghaBench/linux/arch/arc/mm/extr_cache.c___dma_cache_wback_slc.c'
source_filename = "/home/carl/AnghaBench/linux/arch/arc/mm/extr_cache.c___dma_cache_wback_slc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@OP_FLUSH = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i64)* @__dma_cache_wback_slc to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @__dma_cache_wback_slc(i32 %0, i64 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i64, align 8
  store i32 %0, i32* %3, align 4
  store i64 %1, i64* %4, align 8
  %5 = load i32, i32* %3, align 4
  %6 = load i64, i64* %4, align 8
  %7 = load i32, i32* @OP_FLUSH, align 4
  %8 = call i32 @__dc_line_op_k(i32 %5, i64 %6, i32 %7)
  %9 = load i32, i32* %3, align 4
  %10 = load i64, i64* %4, align 8
  %11 = load i32, i32* @OP_FLUSH, align 4
  %12 = call i32 @slc_op(i32 %9, i64 %10, i32 %11)
  ret void
}

declare dso_local i32 @__dc_line_op_k(i32, i64, i32) #1

declare dso_local i32 @slc_op(i32, i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
